--- a/Fiche_IA.ipynb
+++ b/Fiche_IA.ipynb
@@ -9,56 +9,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Requirement already satisfied: pandas in ./venv/lib/python3.9/site-packages (1.5.2)\n",
-      "Requirement already satisfied: python-dateutil>=2.8.1 in ./venv/lib/python3.9/site-packages (from pandas) (2.8.2)\n",
-      "Requirement already satisfied: numpy>=1.20.3 in ./venv/lib/python3.9/site-packages (from pandas) (1.23.5)\n",
-      "Requirement already satisfied: pytz>=2020.1 in ./venv/lib/python3.9/site-packages (from pandas) (2022.6)\n",
-      "Requirement already satisfied: six>=1.5 in ./venv/lib/python3.9/site-packages (from python-dateutil>=2.8.1->pandas) (1.16.0)\n",
-      "Requirement already satisfied: scipy in ./venv/lib/python3.9/site-packages (1.9.3)\n",
-      "Requirement already satisfied: numpy<1.26.0,>=1.18.5 in ./venv/lib/python3.9/site-packages (from scipy) (1.23.5)\n",
-      "Requirement already satisfied: matplotlib in ./venv/lib/python3.9/site-packages (3.6.2)\n",
-      "Requirement already satisfied: fonttools>=4.22.0 in ./venv/lib/python3.9/site-packages (from matplotlib) (4.38.0)\n",
-      "Requirement already satisfied: packaging>=20.0 in ./venv/lib/python3.9/site-packages (from matplotlib) (21.3)\n",
-      "Requirement already satisfied: contourpy>=1.0.1 in ./venv/lib/python3.9/site-packages (from matplotlib) (1.0.6)\n",
-      "Requirement already satisfied: pillow>=6.2.0 in ./venv/lib/python3.9/site-packages (from matplotlib) (9.3.0)\n",
-      "Requirement already satisfied: numpy>=1.19 in ./venv/lib/python3.9/site-packages (from matplotlib) (1.23.5)\n",
-      "Requirement already satisfied: pyparsing>=2.2.1 in ./venv/lib/python3.9/site-packages (from matplotlib) (3.0.9)\n",
-      "Requirement already satisfied: cycler>=0.10 in ./venv/lib/python3.9/site-packages (from matplotlib) (0.11.0)\n",
-      "Requirement already satisfied: python-dateutil>=2.7 in ./venv/lib/python3.9/site-packages (from matplotlib) (2.8.2)\n",
-      "Requirement already satisfied: kiwisolver>=1.0.1 in ./venv/lib/python3.9/site-packages (from matplotlib) (1.4.4)\n",
-      "Requirement already satisfied: six>=1.5 in ./venv/lib/python3.9/site-packages (from python-dateutil>=2.7->matplotlib) (1.16.0)\n",
-      "Collecting scikit-learn\n",
-      "  Downloading scikit_learn-1.1.3-cp39-cp39-macosx_12_0_arm64.whl (7.7 MB)\n",
-      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m7.7/7.7 MB\u001b[0m \u001b[31m43.0 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m00:01\u001b[0m00:01\u001b[0m\n",
-      "\u001b[?25hRequirement already satisfied: numpy>=1.17.3 in ./venv/lib/python3.9/site-packages (from scikit-learn) (1.23.5)\n",
-      "Requirement already satisfied: scipy>=1.3.2 in ./venv/lib/python3.9/site-packages (from scikit-learn) (1.9.3)\n",
-      "Collecting joblib>=1.0.0\n",
-      "  Downloading joblib-1.2.0-py3-none-any.whl (297 kB)\n",
-      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m298.0/298.0 kB\u001b[0m \u001b[31m12.0 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-      "\u001b[?25hCollecting threadpoolctl>=2.0.0\n",
-      "  Downloading threadpoolctl-3.1.0-py3-none-any.whl (14 kB)\n",
-      "Installing collected packages: threadpoolctl, joblib, scikit-learn\n",
-      "Successfully installed joblib-1.2.0 scikit-learn-1.1.3 threadpoolctl-3.1.0\n"
+      "Defaulting to user installation because normal site-packages is not writeable\n",
+      "Requirement already satisfied: pandas in /Users/thibaultserre/Library/Python/3.9/lib/python/site-packages (1.5.2)\n",
+      "Requirement already satisfied: pytz>=2020.1 in /Users/thibaultserre/Library/Python/3.9/lib/python/site-packages (from pandas) (2022.6)\n",
+      "Requirement already satisfied: numpy>=1.20.3 in /Users/thibaultserre/Library/Python/3.9/lib/python/site-packages (from pandas) (1.23.5)\n",
+      "Requirement already satisfied: python-dateutil>=2.8.1 in /Users/thibaultserre/Library/Python/3.9/lib/python/site-packages (from pandas) (2.8.2)\n",
+      "Requirement already satisfied: six>=1.5 in /Library/Developer/CommandLineTools/Library/Frameworks/Python3.framework/Versions/3.9/lib/python3.9/site-packages (from python-dateutil>=2.8.1->pandas) (1.15.0)\n",
+      "\u001b[33mWARNING: You are using pip version 21.2.4; however, version 22.3.1 is available.\n",
+      "You should consider upgrading via the '/Library/Developer/CommandLineTools/usr/bin/python3 -m pip install --upgrade pip' command.\u001b[0m\n",
+      "Defaulting to user installation because normal site-packages is not writeable\n",
+      "Requirement already satisfied: scipy in /Users/thibaultserre/Library/Python/3.9/lib/python/site-packages (1.9.3)\n",
+      "Requirement already satisfied: numpy<1.26.0,>=1.18.5 in /Users/thibaultserre/Library/Python/3.9/lib/python/site-packages (from scipy) (1.23.5)\n",
+      "\u001b[33mWARNING: You are using pip version 21.2.4; however, version 22.3.1 is available.\n",
+      "You should consider upgrading via the '/Library/Developer/CommandLineTools/usr/bin/python3 -m pip install --upgrade pip' command.\u001b[0m\n",
+      "Defaulting to user installation because normal site-packages is not writeable\n",
+      "Requirement already satisfied: matplotlib in /Users/thibaultserre/Library/Python/3.9/lib/python/site-packages (3.6.2)\n",
+      "Requirement already satisfied: cycler>=0.10 in /Users/thibaultserre/Library/Python/3.9/lib/python/site-packages (from matplotlib) (0.11.0)\n",
+      "Requirement already satisfied: fonttools>=4.22.0 in /Users/thibaultserre/Library/Python/3.9/lib/python/site-packages (from matplotlib) (4.38.0)\n",
+      "Requirement already satisfied: kiwisolver>=1.0.1 in /Users/thibaultserre/Library/Python/3.9/lib/python/site-packages (from matplotlib) (1.4.4)\n",
+      "Requirement already satisfied: packaging>=20.0 in /Users/thibaultserre/Library/Python/3.9/lib/python/site-packages (from matplotlib) (21.3)\n",
+      "Requirement already satisfied: pyparsing>=2.2.1 in /Users/thibaultserre/Library/Python/3.9/lib/python/site-packages (from matplotlib) (3.0.9)\n",
+      "Requirement already satisfied: numpy>=1.19 in /Users/thibaultserre/Library/Python/3.9/lib/python/site-packages (from matplotlib) (1.23.5)\n",
+      "Requirement already satisfied: python-dateutil>=2.7 in /Users/thibaultserre/Library/Python/3.9/lib/python/site-packages (from matplotlib) (2.8.2)\n",
+      "Requirement already satisfied: pillow>=6.2.0 in /Users/thibaultserre/Library/Python/3.9/lib/python/site-packages (from matplotlib) (9.3.0)\n",
+      "Requirement already satisfied: contourpy>=1.0.1 in /Users/thibaultserre/Library/Python/3.9/lib/python/site-packages (from matplotlib) (1.0.6)\n",
+      "Requirement already satisfied: six>=1.5 in /Library/Developer/CommandLineTools/Library/Frameworks/Python3.framework/Versions/3.9/lib/python3.9/site-packages (from python-dateutil>=2.7->matplotlib) (1.15.0)\n",
+      "\u001b[33mWARNING: You are using pip version 21.2.4; however, version 22.3.1 is available.\n",
+      "You should consider upgrading via the '/Library/Developer/CommandLineTools/usr/bin/python3 -m pip install --upgrade pip' command.\u001b[0m\n",
+      "Defaulting to user installation because normal site-packages is not writeable\n",
+      "Requirement already satisfied: scikit-learn in /Users/thibaultserre/Library/Python/3.9/lib/python/site-packages (1.1.3)\n",
+      "Requirement already satisfied: numpy>=1.17.3 in /Users/thibaultserre/Library/Python/3.9/lib/python/site-packages (from scikit-learn) (1.23.5)\n",
+      "Requirement already satisfied: threadpoolctl>=2.0.0 in /Users/thibaultserre/Library/Python/3.9/lib/python/site-packages (from scikit-learn) (3.1.0)\n",
+      "Requirement already satisfied: joblib>=1.0.0 in /Users/thibaultserre/Library/Python/3.9/lib/python/site-packages (from scikit-learn) (1.2.0)\n",
+      "Requirement already satisfied: scipy>=1.3.2 in /Users/thibaultserre/Library/Python/3.9/lib/python/site-packages (from scikit-learn) (1.9.3)\n",
+      "\u001b[33mWARNING: You are using pip version 21.2.4; however, version 22.3.1 is available.\n",
+      "You should consider upgrading via the '/Library/Developer/CommandLineTools/usr/bin/python3 -m pip install --upgrade pip' command.\u001b[0m\n"
      ]
     }
    ],
    "source": [
-    "! pip install pandas\n",
-    "! pip install scipy\n",
-    "! pip install matplotlib\n",
-    "! pip install scikit-learn\n"
+    "! pip3 install pandas\n",
+    "! pip3 install scipy\n",
+    "! pip3 install matplotlib\n",
+    "! pip3 install scikit-learn\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,15 +143,23 @@
    "source": [
     "# faire une prédiction\n",
     "\n",
+    "#on def d'abord la fonction\n",
     "def prediction(x):\n",
     "   return slope * x + intercept\n",
-    "# on a Y=aX+b, on a a et b, on détermine donc Y dans cette fonction "
+    "# on a Y=aX+b, on a a et b, on détermine donc Y dans cette fonction \n",
+    "\n",
+    "#la variable fitLine sera un tableau de valeurs prédites depuis la tableau de variables X\n",
+    "fitLine = prediction(X)\n",
+    "plt.plot(X, fitLine, c='r')\n",
+    "\n",
+    "# on test en prédisant une valeur particulière\n",
+    "print(\"prediction(21.72) = \",prediction(21.72))"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.6 ('venv': venv)",
+   "display_name": "Python 3.8.10 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -165,7 +178,7 @@
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "c90602fd53ca698268d1ba7944d12f0772b2fe3c331ca56d7ad2057ae0673a0d"
+    "hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"
    }
   }
  },
